Update exercise of n2

--- a/notebook_3.ipynb
+++ b/notebook_3.ipynb
@@ -1456,8 +1456,8 @@
     "]\n",
     "\n",
     "figure_accuracies = plt.figure().number\n",
-    "figure_contradiction = plt.figure().number\n",
-    "figure_exploration = plt.figure().number\n",
+    "figure_contradictions = plt.figure().number\n",
+    "figure_explorations = plt.figure().number\n",
     "idxs = {}\n",
     "\n",
     "for sampler_name, sampler in samplers:\n",
@@ -1491,6 +1491,8 @@
     "            idx.add_batch(sampler.select_samples(X[idx.non_selected]))\n",
     "\n",
     "        all_accuracies.append(accuracies)\n",
+    "        all_contradictions.append(contradictions)\n",
+    "        all_explorations.append(explorations)\n",
     "    \n",
     "    # Keep the last splitter\n",
     "    idxs[sampler_name] = idx\n",
@@ -1500,13 +1502,41 @@
     "    plt.figure(figure_accuracies)\n",
     "    plot_confidence_interval(x_data, all_accuracies, label=sampler_name)\n",
     "\n",
+    "    plt.figure(figure_contradictions)\n",
+    "    plot_confidence_interval(x_data, all_contradictions, label=sampler_name)\n",
+    "    \n",
+    "    plt.figure(figure_explorations)\n",
+    "    plot_confidence_interval(x_data, all_explorations, label=sampler_name)\n",
+    "    \n",
     "plt.figure(figure_accuracies)\n",
     "plt.xlabel('Labeled samples')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "\n",
+    "plt.figure(figure_contradictions)\n",
+    "plt.xlabel('Labeled samples')\n",
+    "plt.ylabel('Contradiction')\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.figure(figure_explorations)\n",
+    "plt.xlabel('Labeled samples')\n",
+    "plt.ylabel('Exploration')\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd208834",
+   "metadata": {},
+   "source": [
+    "## Exercise: Adaptive sampler\n",
+    "\n",
+    "Given metrics values and accuracy, you can now write your own adaptive sampling strategy!"
    ]
   },
   {
@@ -1548,7 +1578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
