--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -2,86 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "64a52462",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pigeon\n",
-    "\n"
+    "import re\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9008e0a0",
+   "metadata": {},
+   "source": [
+    "# Life of a labeler\n",
+    "\n",
+    "As many things, one does not know the real burden of a labeler before trying it themselves. In this introduction, we propose to let you label some samples from a clickbait detection task. You will be given newstitle and it is up to you to tell if the link points to a legit article with content, or to a clickbait news meant to show you ads."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "bbfa41b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = np.loadtxt('clickbait.csv', delimiter='_', dtype='str')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "ef715439",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Kimchi Quesadillas',\n",
-       "       'Your Chance to Show What the Super Bowl Logo Should Look Like',\n",
-       "       'Lego Reportedly Responds To Requests For Inclusivity With New Toy In Wheelchair',\n",
-       "       'Fresh Fruit Sushi',\n",
-       "       'Priest Reportedly Suspended For Riding A Hoverboard During Mass',\n",
-       "       'Trying To Keep A Plant Alive',\n",
-       "       'The Body as Billboard: Your Ad Here',\n",
-       "       'Jonny Lee Miller And Lucy Liu Play Whodunit',\n",
-       "       '6 Little Victories',\n",
-       "       \"UK's Slow Response To Ebola Cost Thousands Of Lives, Says Report\",\n",
-       "       'Never Mind What It Costs. Can I Get 70 % Off?',\n",
-       "       'A Plant That Thrives When Used as a Toilet',\n",
-       "       \"Goodbye, America's Next Top Model\",\n",
-       "       'Erykah Badu Effortlessly Threw Shade At Iggy Azalea Last Night',\n",
-       "       'With Digital Foci, Carry Your Slide Show With You',\n",
-       "       '7 Highs And 4 Lows Of \"Grease: Live\"',\n",
-       "       'Software That Monitors Your Work, Wherever You Are',\n",
-       "       'Golf Headwear: A Touch of Style, Even if You Have No Touch',\n",
-       "       'Remembering the Way It Was',\n",
-       "       'Running to Reclaim Your Body From Cancer',\n",
-       "       'A Man Set Fire To A Gas Pump Trying To Kill A Spider With A Lighter',\n",
-       "       'Happy Pugsgiving', 'In Search Of The Next \"Battlestar Galactica\"',\n",
-       "       'A Case For Sleeping In',\n",
-       "       'Stock Investors Ask:  Is It a Bear or a Bull?',\n",
-       "       '\"1 Indian + 1 Indian = Unrelatable\": Television\\'s Race Equations',\n",
-       "       'In Defense Of Oatmeal Raisin Cookies',\n",
-       "       'The New And Improved Eva Longoria',\n",
-       "       'How to Make Smart Gifts to Charities in Tough Financial Times',\n",
-       "       'Nas Receives W.E.B. Du Bois Medal At Harvard University'],\n",
-       "      dtype='<U79')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "2f43ffff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3c32c94628f4b2aa23e13e6fdd10062",
+       "model_id": "031843085741417eafbf5ef0788b4390",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,7 +46,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64831e6992a544df82091f7b1be72568",
+       "model_id": "e602293f23b0419c8f6ba7e40d3accb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,7 +60,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccdd95158a164b86bdb418379a6cc798",
+       "model_id": "16d5dd6302354471867b86b7bf169e25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,16 +72,6 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -139,51 +80,49 @@
     }
    ],
    "source": [
-    "annotations = pigeon.annotate(data, options=['clickbait', 'legit'])"
+    "data = np.loadtxt('clickbait.csv', delimiter='_', dtype='str')\n",
+    "annotations = pigeon.annotate(\n",
+    "    data, options=['clickbait', 'legit'],\n",
+    "    shuffle=True, include_skip=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "9a771963",
+   "cell_type": "markdown",
+   "id": "72dad588",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "np.savetxt('clickbait_{}.csv'.format, annotations, fmt='%s', delimiter='_')"
+    "Your annotation work is done, congratulations! We will now write you annotations to a file for further inspection. We will ask you to provide a name for your annotation, first name + last name will do. Any character that is not lowercase later will be discarded. Once it's done, please upload this file on the slack channel of the workshop.\n",
+    "\n",
+    "Please note that if you are in google collab, the file will be created in your workspace."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b69fd6f1",
+   "execution_count": 7,
+   "id": "9a771963",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "klnefner\n"
+      "aabraham\n",
+      "Written file clickbait_aabraham.csv\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'klnefner'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "input()"
+    "file_id = re.compile('[^a-z]').sub('', input())\n",
+    "if len(file_id) == 0:\n",
+    "    raise ValueError('Please provide a non empty string containing lowercase letters.')\n",
+    "np.savetxt('clickbait_{}.csv'.format(file_id), annotations, fmt='%s', delimiter='_')\n",
+    "print('Written file clickbait_{}.csv'.format(file_id))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe739be3",
+   "id": "d8bab4f6",
    "metadata": {},
    "outputs": [],
    "source": []
