--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Introduction to active learning\n",
+    "# Active Learning on a toy example\n",
     "\n",
     "In this first notebook, we set up a very basic active learning experiment and realise a benchmark of various query sampling methods. We use the digit recognition task from the scikit-learn package.\n",
     "\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## My first active learning loop\n",
+    "\n",
+    "For this first loop, we will keep things simple. We do a first loop with a simple sampler and without cross-validation. A skeleton of algorithm is proposed to help your design your experiment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected: [4 5]\n",
+      "Selected: [6 7]\n",
+      "Selected: [8 9]\n",
+      "Selected: [10 11]\n",
+      "Selected: [12 13]\n",
+      "Selected: [14 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import make_blobs\n",
+    "from sklearn.svm import SVC\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "n = 30\n",
+    "batch_size = 2\n",
+    "n_iter = 6\n",
+    "\n",
+    "X, y = make_blobs(n_samples=n, centers=2,\n",
+    "                  random_state=0, cluster_std=0.80)\n",
+    "\n",
+    "model = SVC(kernel='linear', C=1e10, probability=True)\n",
+    "\n",
+    "\n",
+    "# Selected samples\n",
+    "# ----------------\n",
+    "# As a start, select the first samples available from each class.\n",
+    "\n",
+    "init_idx = [np.where(y == 0)[0][0], np.where(y == 1)[0][0]]\n",
+    "\n",
+    "mask = np.zeros(n, dtype=bool)\n",
+    "indices = np.arange(n)\n",
+    "mask[init_idx] = True\n",
+    "\n",
+    "# Main active learning loop\n",
+    "# -------------------------\n",
+    "# During an active learning loop, you should:\n",
+    "# - fit the model on already selected samples\n",
+    "# - use the sampler defined before to select new samples\n",
+    "# - integrate those samples in the pool of selected samples\n",
+    "# Remember that your sampler selects the first sample of the unlabaled pool.\n",
+    "# You can therefore sanity check your code by looking at the aboslute index\n",
+    "# of your samples.\n",
+    "\n",
+    "sampler = DummySampler(batch_size=batch_size)\n",
+    "\n",
+    "for j in range(n_iter):\n",
+    "    model.fit(X[mask], y[mask])\n",
+    "    sampler.fit(X[mask], y[mask])\n",
+    "    selected = sampler.select_samples(X[~mask])\n",
+    "    mask[indices[~mask][selected]] = True\n",
+    "    print('Selected:', indices[~mask][selected])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let's get closer to real life!\n",
+    "\n",
+    "\n",
     "## Indexing data\n",
     "\n",
     "It may not seems like it but indexing data in an active learning setting is important. It is even one of the most striking difference between active learning packages that handles it differently. Cardinal proposes a utility object that allows easily train / test split, stored the selected samples for each iteration, but also allows to retrieve them.\n",
@@ -265,7 +341,7 @@
    "source": [
     "## Core Active Learning Experiment\n",
     "\n",
-    "\n"
+    "In this notebook and the following, we will use the same experiment structure. It is paramount to take time to get used to it as we will make it grow and it will become more complex in the following exercises. Please take time to read it carefully and understand each step."
    ]
   },
   {
@@ -292,16 +368,22 @@
     "from cardinal.plotting import plot_confidence_interval\n",
     "\n",
     "\n",
+    "# Samplers\n",
+    "\n",
     "samplers = [\n",
     "    ('Random', RandomSampler(batch_size)),\n",
     "    ('Margin', MarginSampler(model, batch_size, assume_fitted=True)),\n",
     "]\n",
+    "\n",
+    "# Here we initialize the matplotlib figure and an index variable that will keep\n",
+    "# track of all the experiment selected samples.\n",
     "\n",
     "figure_accuracies = plt.figure().number\n",
     "idxs = {}\n",
     "\n",
     "for sampler_name, sampler in samplers:\n",
     "    \n",
+    "    # Keeps track of accuracy over the cross_validation folds of the experiment\n",
     "    all_accuracies = []\n",
     "\n",
     "    for k in range(10):\n",
@@ -313,7 +395,7 @@
     "        one_per_class = np.unique(y[idx.non_selected], return_index=True)[1]\n",
     "        idx.add_batch(one_per_class)\n",
     "\n",
-    "        # A classic active learning loop\n",
+    "        # Here you recognize the active learning loop coded above\n",
     "        for j in range(n_iter):\n",
     "            model.fit(X[idx.selected], y[idx.selected])\n",
     "            accuracies.append(model.score(X[idx.test], y[idx.test]))\n",
@@ -322,14 +404,17 @@
     "\n",
     "        all_accuracies.append(accuracies)\n",
     "    \n",
-    "    # Keep the last splitter\n",
+    "    # Keep the splitter of the latest experiment since the exercise requires to analyze one iteration.\n",
     "    idxs[sampler_name] = idx\n",
     "    \n",
+    "    # Compute the number of samples for the x-axis\n",
     "    x_data = np.arange(10, batch_size * (n_iter - 1) + 11, batch_size)\n",
     "\n",
+    "    # Load the figure that contains accuracies and plot the result\n",
     "    plt.figure(figure_accuracies)\n",
     "    plot_confidence_interval(x_data, all_accuracies, label=sampler_name)\n",
     "\n",
+    "# Fine tune the plot and display it\n",
     "plt.figure(figure_accuracies)\n",
     "plt.xlabel('Labeled samples')\n",
     "plt.ylabel('Accuracy')\n",
@@ -343,9 +428,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis\n",
+    "## Analysis (your turn now!)\n",
     "\n",
-    "Now plot the tSNE representation of the two methods at different timestamps and try to understand why Margin is better than Random. In this example, we are interested in small isles of samples that are separated from their main cluster. Those sample usually have an ambiguous representation. By plotting the selection around iterations 6 to 8, you will notice that margin sampling focuses on those isles way before random sampling."
+    "Just abobe, we have defined a function to plot a tSNE representation of the data. We have also run two different samplers and kept the history of their selected samples. We want now to build our intuition about why Margin sampling is better than Random, just by looking at the selected samples. Plot the selected samples at different iterations and try to understand by yourself!\n",
+    "\n",
+    "In order to plot the selected samples for the random sampler at iteration 2, do the following:\n",
+    "`plot_digits('Random', idxs['Random'], it=2)`"
    ]
   },
   {
@@ -416,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
