Add notebook 2 for participants

--- a/notebook_3.ipynb
+++ b/notebook_3.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "259a12d2",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
     "import openml\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "import numpy as np\n",
     "\n",
     "\n",
@@ -92,7 +92,7 @@
     "X = ct.fit_transform(X)\n",
     "n_iter = 20\n",
     "batch_size = 200\n",
-    "model = MLPClassifier()"
+    "model = RandomForestClassifier()"
    ]
   },
   {
@@ -1543,15 +1543,7 @@
    "cell_type": "markdown",
    "id": "d252648a",
    "metadata": {},
-   "source": [
-    "## Challenge: The devil's victim\n",
-    "\n",
-    "You are now participating in a global challenge! Your goal is to create the best sampling strategy. You are given:\n",
-    "- A small subset of labeled data picked randomly from the data\n",
-    "- A large unlabeled test set\n",
-    "\n",
-    "Your challenge is to find the active learning strategy that performs the best based on labeled and unlabeled data. Good luck!"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
