--- a/challenge.ipynb
+++ b/challenge.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac9c6808",
+   "id": "f4b47e9f",
    "metadata": {},
    "source": [
     "## A little help\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "62fb1072",
+   "id": "5ff0d757",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d63fb4fa",
+   "id": "f3a63f7c",
    "metadata": {},
    "source": [
     "### Exploration\n",
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "97d12df5",
+   "id": "f67fe55b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cde1c7e",
+   "id": "fc93d328",
    "metadata": {},
    "source": [
     "## Main loop\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "abebbae6",
+   "id": "b96546cd",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66741ff7",
+   "id": "a82c2139",
    "metadata": {},
    "source": [
     "# Evaluation\n",
@@ -527,8 +527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0a2752ff",
+   "execution_count": 21,
+   "id": "cc597a47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,14 +537,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b2eccb6e",
+   "execution_count": 23,
+   "id": "49c96d85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.281\n"
+     ]
+    }
+   ],
    "source": [
     "accuracies = []\n",
     "\n",
-    "y_test = np.loadtxt('admin/y_train.csv')\n",
+    "y_test = np.loadtxt('admin/y_test.csv')\n",
     "idx = ActiveLearningSplitter(X_test.shape[0])\n",
     "\n",
     "for j in range(n_iter):\n",
@@ -552,11 +560,19 @@
     "    yj = np.hstack([y_train, y_test[idx.selected]])\n",
     "    model.fit(Xj, yj)\n",
     "    accuracies.append(model.score(X_test, y_test))\n",
-    "    sampler.fit(Xj, yj)\n",
-    "    idx.add_batch(sampler.select_samples(X_test[idx.non_selected]))\n",
+    "    my_sampler.fit(Xj, yj)\n",
+    "    idx.add_batch(my_sampler.select_samples(X_test[idx.non_selected]))\n",
     "\n",
-    "print(accuracies.sum())"
+    "print(np.sum(accuracies))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aedb6001",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
