Add collab headers

--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "bbfa41b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "031843085741417eafbf5ef0788b4390",
+       "model_id": "1d57a063f7db4e08998d72d5c8e80c92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,7 +46,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e602293f23b0419c8f6ba7e40d3accb3",
+       "model_id": "4f5c4370fbda4aa4b33b07c012cec78f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,7 +60,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16d5dd6302354471867b86b7bf169e25",
+       "model_id": "393a87ca3a364df1909610e80d7b0cc1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "9a771963",
    "metadata": {},
    "outputs": [
@@ -106,13 +106,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aabraham\n",
-      "Written file clickbait_aabraham.csv\n"
+      "Enter file idalex\n",
+      "Written file clickbait_alex.csv\n"
      ]
     }
    ],
    "source": [
-    "file_id = re.compile('[^a-z]').sub('', input())\n",
+    "file_id = re.compile('[^a-z]').sub('', input('Enter file id'))\n",
     "if len(file_id) == 0:\n",
     "    raise ValueError('Please provide a non empty string containing lowercase letters.')\n",
     "np.savetxt('clickbait_{}.csv'.format(file_id), annotations, fmt='%s', delimiter='_')\n",
