--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  from google.colab import drive\n",
+    "  import os\n",
+    "\n",
+    "\n",
+    "  drive.mount('/content/drive')\n",
+    "  os.chdir('/content/drive/MyDrive/active-learning-tutorial-main/')\n",
+    "  !pip install -r requirements_collab.txt\n",
+    "except ImportError as e:\n",
+    "  if e.name == 'google.colab':\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
