--- a/challenge.ipynb
+++ b/challenge.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93a2c415",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  from google.colab import drive\n",
+    "  import os\n",
+    "\n",
+    "\n",
+    "  drive.mount('/content/drive')\n",
+    "  os.chdir('/content/drive/MyDrive/active-learning-tutorial-main/')\n",
+    "  !pip install -r requirements_collab.txt\n",
+    "except ImportError as e:\n",
+    "  if e.name == 'google.colab':\n",
+    "    pass\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2294a77a",
    "metadata": {},
