--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "112b5d78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  from google.colab import drive\n",
+    "  import os\n",
+    "\n",
+    "\n",
+    "  drive.mount('/content/drive')\n",
+    "  os.chdir('/content/drive/MyDrive/active-learning-tutorial-main/')\n",
+    "  !pip install -r requirements_collab.txt\n",
+    "  !pip install pigeon-jupyter\n",
+    "except ImportError as e:\n",
+    "  if e.name == 'google.colab':\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "64a52462",
    "metadata": {},
@@ -106,8 +127,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter file idalex\n",
-      "Written file clickbait_alex.csv\n"
+      "Enter file idaabraham\n",
+      "Written file clickbait_aabraham.csv\n"
      ]
     }
    ],
