--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -31,7 +31,8 @@
     "import numpy as np\n",
     "import pigeon\n",
     "import re\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n"
    ]
   },
   {
@@ -40,6 +41,8 @@
    "metadata": {},
    "source": [
     "# Life of a labeler\n",
+    "\n",
+    "# alexandre.abraham@dataiku.com\n",
     "\n",
     "As many things, one does not know the real burden of a labeler before trying it themselves. In this introduction, we propose to let you label some samples from a clickbait detection task. You will be given newstitle and it is up to you to tell if the link points to a legit article with content, or to a clickbait news meant to show you ads."
    ]
