--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -441,6 +441,8 @@
    "source": [
     "## Analysis (your turn now!)\n",
     "\n",
+    "# alexandre.abraham@dataiku.com\n",
+    "\n",
     "Just abobe, we have defined a function to plot a tSNE representation of the data. We have also run two different samplers and kept the history of their selected samples. We want now to build our intuition about why Margin sampling is better than Random, just by looking at the selected samples. Plot the selected samples at different iterations and try to understand by yourself!\n",
     "\n",
     "In order to plot the selected samples for the random sampler at iteration 2, do the following:\n",
